Bug 496745 - Owner User name and owner group name show up as always being the same even when they're different
Summary: Owner User name and owner group name show up as always being the same even wh...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Properties dialog (other bugs)
Version First Reported In: 6.8.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-11-27 09:26 UTC by 32th System
Modified: 2024-11-28 17:36 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.9
Sentry Crash Report:


Attachments
Screenshot showing a different owner user in the terminal vs Dolphin (86.97 KB, image/png)
2024-11-27 09:28 UTC, 32th System
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 32th System 2024-11-27 09:26:46 UTC
SUMMARY
When a file or folder has a different user and group assigned as it's owner (example thc:libvirt), Dolphin will show the same name for both the owner user and the owner group (as if it's thc:thc, or libvirt:libvirt). Note that while displaying the owner is buggy, setting the owner works perfectly fine.

STEPS TO REPRODUCE
1. Have the owner username and owner group of a file/folder have different names. This can be achieved either through Dolphin, or by using chown

OBSERVED RESULT
Dolphin will show the same name for both the owner user and owner group. Usually, it will use the user's name for both, but by giving the group read+write permissions, it may use the group name for both, even if no user that has the exact same name as the group exists.

If no group with the same name as the owner user exists, Dolphin can instead use the name of the previous owner.

EXPECTED RESULT
The correct user and group is shown as the owner of a file or folder, even if the user/group names are different

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0
Comment 1 32th System 2024-11-27 09:28:29 UTC
Created attachment 176161 [details]
Screenshot showing a different owner user in the terminal vs Dolphin
Comment 2 Paul Worrall 2024-11-27 10:35:24 UTC
I can reproduce this so setting Status to Confirmed
Also, the properties dialog is provided by kio, so changing the product to that

Operating System: Arch Linux 
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0
Graphics Platform: Wayland
Comment 3 Bug Janitor Service 2024-11-28 07:24:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1765
Comment 4 Harald Sitter 2024-11-28 12:57:22 UTC
Git commit 9dab22b8b750e6b747be1ad26fd209690fb0e875 by Harald Sitter.
Committed on 28/11/2024 at 07:22.
Pushed by sitter into branch 'master'.

kpropertiesdialog: fix user display to actually use the user data

broke in b425985c9c5845d304a4461929656bbd937c3a01

M  +1    -1    src/widgets/kpropertiesdialogbuiltin_p.cpp

https://invent.kde.org/frameworks/kio/-/commit/9dab22b8b750e6b747be1ad26fd209690fb0e875