kpropertiesdialog: fix user display to actually use the user data

broke in b425985c9c5845d304a4461929656bbd937c3a01

BUG: 496745